fix: 🐛 bring back stable scrollbar gutter

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -135,3 +135,7 @@
     animation: none !important;
   }
 }
+
+html {
+  scrollbar-gutter: stable;
+}
